0216 IP_generate code upload

--- a/.hydra/config.yaml
+++ b/.hydra/config.yaml
@@ -4,7 +4,7 @@ debug: false
 save_dir: ${root_dir}/${task}/data/${planner.agent_type}-plans/${mode}
 disp: false
 shared_memory: false
-task: real-world-making-word
+task: debug
 mode: test
 'n': 500
 save_data: false
@@ -58,9 +58,9 @@ device: cuda
 oracle_flag: false
 eval_episodes: 1
 use_vision_fewshot: false
-category_mode: 0
-plan_mode: closed_loop
-llm_type: gpt4
+category_mode: 1
+plan_mode: base
+llm_type: 'no'
 agent_mode: 3
 train_config: /home/pjw971022/RealWorldLLM/cliport/cliport_quickstart/multi-language-conditioned-cliport-n1000-train/.hydra/config.yaml
 cliport_model_path: /home/pjw971022/RealWorldLLM/cliport/cliport_quickstart/multi-language-conditioned-cliport-n1000-train/checkpoints/
