--- a/.hydra/overrides.yaml
+++ b/.hydra/overrides.yaml
@@ -1,6 +1,8 @@
-- task=real-world-making-word
+- task=debug
 - agent_mode=3
 - mode=test
-- category_mode=0
+- category_mode=1
 - record.save_video=False
 - task_level=1
+- plan_mode=base
+- llm_type=no
