--- a/.hydra/overrides.yaml
+++ b/.hydra/overrides.yaml
@@ -1,8 +1,6 @@
-- task=debug
+- task=real-world-voice2demo
 - agent_mode=3
 - mode=test
-- category_mode=1
+- category_mode=0
 - record.save_video=False
 - task_level=1
-- plan_mode=base
-- llm_type=no
