--- a/real_bot/rw_config/inference.yaml
+++ b/real_bot/rw_config/inference.yaml
@@ -7,7 +7,7 @@ root_dir: ''
 
 hydra:
   run:
-    dir: /home/pjw971022/RealWorldLLM/
+    dir: /home/pjw971022/Sembot/
 
 save_dir: ${root_dir}/${task}/data/${planner.agent_type}-plans/${mode}  # where to store plans from oracle, lm
 disp: False  # visualize PyBullet
@@ -36,7 +36,7 @@ dataset:
 # record videos (super slow)
 record:
   save_video: True
-  save_video_path: /home/pjw971022/RealWorldLLM/real_bot/save_viz/llm_inference
+  save_video_path: /home/pjw971022/Sembot/real_bot/save_viz/llm_inference
   add_text: True
   fps: 20
   video_height: 640
@@ -80,8 +80,8 @@ category_mode: 0
 plan_mode: open_loop
 llm_type: gemini
 agent_mode: 3
-train_config: /home/pjw971022/RealWorldLLM/cliport/cliport_quickstart/multi-language-conditioned-cliport-n1000-train/.hydra/config.yaml
-cliport_model_path: /home/pjw971022/RealWorldLLM/cliport/cliport_quickstart/multi-language-conditioned-cliport-n1000-train/checkpoints/
+train_config: /home/pjw971022/Sembot/cliport/cliport_quickstart/multi-language-conditioned-cliport-n1000-train/.hydra/config.yaml
+cliport_model_path: /home/pjw971022/Sembot/cliport/cliport_quickstart/multi-language-conditioned-cliport-n1000-train/checkpoints/
 agent: cliport
 data_dir: /home/mnt/data/ravens/
 n_demos: 10
