--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,5 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 cliport
+OWL_ViT_inference_example.ipynb
+test_llm.ipynb
