--- a/.hydra/hydra.yaml
+++ b/.hydra/hydra.yaml
@@ -1,6 +1,6 @@
 hydra:
   run:
-    dir: /home/pjw971022/RealWorldLLM/
+    dir: /home/pjw971022/Sembot/
   sweep:
     dir: multirun/${now:%Y-%m-%d}/${now:%H-%M-%S}
     subdir: ${hydra.job.num}
@@ -136,18 +136,18 @@ hydra:
   runtime:
     version: 1.3.2
     version_base: '1.1'
-    cwd: /home/pjw971022/RealWorldLLM
+    cwd: /home/pjw971022/Sembot
     config_sources:
     - path: hydra.conf
       schema: pkg
       provider: hydra
-    - path: /home/pjw971022/RealWorldLLM/real_bot/rw_config
+    - path: /home/pjw971022/Sembot/real_bot/rw_config
       schema: file
       provider: main
     - path: ''
       schema: structured
       provider: schema
-    output_dir: /home/pjw971022/RealWorldLLM
+    output_dir: /home/pjw971022/Sembot
     choices:
       hydra/env: default
       hydra/callbacks: null
