--- a/ravens/.hydra/hydra.yaml
+++ b/ravens/.hydra/hydra.yaml
@@ -1,6 +1,6 @@
 hydra:
   run:
-    dir: /home/pjw971022/RealWorldLLM/ravens
+    dir: /home/pjw971022/Sembot/ravens
   sweep:
     dir: multirun/${now:%Y-%m-%d}/${now:%H-%M-%S}
     subdir: ${hydra.job.num}
@@ -134,18 +134,18 @@ hydra:
   runtime:
     version: 1.3.2
     version_base: '1.1'
-    cwd: /home/pjw971022/RealWorldLLM
+    cwd: /home/pjw971022/Sembot
     config_sources:
     - path: hydra.conf
       schema: pkg
       provider: hydra
-    - path: /home/pjw971022/RealWorldLLM/ravens/ravens/cfg
+    - path: /home/pjw971022/Sembot/ravens/ravens/cfg
       schema: file
       provider: main
     - path: ''
       schema: structured
       provider: schema
-    output_dir: /home/pjw971022/RealWorldLLM/ravens
+    output_dir: /home/pjw971022/Sembot/ravens
     choices:
       hydra/env: default
       hydra/callbacks: null
