--- a/.hydra/hydra.yaml
+++ b/.hydra/hydra.yaml
@@ -117,10 +117,12 @@ hydra:
     - category_mode=0
     - record.save_video=False
     - task_level=1
+    - llm_type=gemini
+    - plan_mode=open_loop
   job:
     name: llm_eval_real
     chdir: null
-    override_dirname: category_mode=0,mode=test,record.save_video=False,task=real-world-multi-modal,task_level=1
+    override_dirname: category_mode=0,llm_type=gemini,mode=test,plan_mode=open_loop,record.save_video=False,task=real-world-multi-modal,task_level=1
     id: ???
     num: ???
     config_name: inference
