--- a/real_bot/rw_config/inference.yaml
+++ b/real_bot/rw_config/inference.yaml
@@ -12,9 +12,8 @@ hydra:
 save_dir: ${root_dir}/${task}/data/${planner.agent_type}-plans/${mode}  # where to store plans from oracle, lm
 disp: False  # visualize PyBullet
 shared_memory: False
-task: packing-seen-google-objects-seq # put-block-in-bowl, towers-of-hanoi-seq
-mode: train  # train, test-success, test-optimal, test-generalize
-n: 500 # number of demos to generate
+task: real-world-multi-modal
+mode: test
 save_data: False  # write episodes to disk, default=False
 parallel: True  # use multiprocessing for data generation
 max_steps: 10
@@ -35,7 +34,7 @@ dataset:
 
 # record videos (super slow)
 record:
-  save_video: True
+  save_video: False
   save_video_path: /home/pjw971022/Sembot/real_bot/save_vision/llm_inference
   add_text: True
   fps: 20
