--- a/.gitignore
+++ b/.gitignore
@@ -180,4 +180,6 @@ test_llm.ipynb
 outputs/
 real_bot/save_vision/obs/
 physical_reasoning/pc_2d/utils/LLaVA
+physical_reasoning/pc_3d/ShapeLLM
 sembot/src/envs/gemini-video-0403-0476b10bf020.json
+physical_reasoning/pc_3d/ShapeLLM/checkpoints/recon/large.pth
