--- a/physical_reasoning/latest_sembot_settings.yml
+++ b/physical_reasoning/latest_sembot_settings.yml
@@ -53,7 +53,7 @@ llava_model_3d:
   max_new_tokens: 512
   load_8bit: False
   load_4bit: False
-
+  conv_mode:
   # model_path: liuhaotian/llava-v1.5-13b-lora # liuhaotian/llava-v1.5-13b-lora
   # model_base: remyxai/SpaceLLaVA # liuhaotian/llava-v1.6-34b liuhaotian/llava-v1.6-vicuna-7b remyxai/SpaceLLaVA
   # conv_mode: spatial_vlm
